Adding proper authentication to users.Small change to vehicle creation.